force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__ClaimItem_LocationId_map_Location_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimItem_LocationId_map_Location_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimItem_LocationId_map_Location_Id_N_1</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>ClaimItem_LocationId_map_Location_Id_N_1</relationshipLabel>
    <relationshipName>ClaimItem_LocationId_map_Location_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>