force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__CoverageCategoryCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CoverageCategoryCodeId__c</fullName>
    <label>Coverage Category Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CoverageCategoryCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>