force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__CoverageCategoryCodeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__CoverageCategoryCodeObject__c</fullName>
    <label>Coverage Category Code Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CoverageCategoryCodeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>