force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__EligiblePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__EligiblePercent__c</fullName>
    <label>Eligible Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EligiblePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>