force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__InsurancePolicyCoverageId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InsurancePolicyCoverageId__c</fullName>
    <label>Insurance Policy Coverage</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InsurancePolicyCoverageId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>