force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__ItemCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemCategory__c</fullName>
    <label>Item Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>