force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__ItemCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemCodeId__c</fullName>
    <label>Item Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>