force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__ItemCodeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemCodeObject__c</fullName>
    <label>Item Code Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemCodeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>