force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__PayableAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PayableAmount__c</fullName>
    <label>Payable Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PayableAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>