force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__PriceAdjustmentValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PriceAdjustmentValueNumber__c</fullName>
    <label>Price Adjustment Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PriceAdjustmentValueNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>