force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__rel_1723128318040_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128318040_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimItem_ClaimParticipantId_map_Cla_rel</label>
    <referenceTo>ssot__ClaimParticipant__dlm</referenceTo>
    <relationshipLabel>ClaimItem_ClaimParticipantId_map_Cla_rel</relationshipLabel>
    <relationshipName>rel_1723128318040_end</relationshipName>
    <type>Lookup</type>
</CustomField>