force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__rel_1723128324122_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128324122_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimItem_CoverageCategoryCodeId_map_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>ClaimItem_CoverageCategoryCodeId_map_rel</relationshipLabel>
    <relationshipName>rel_1723128324122_end</relationshipName>
    <type>Lookup</type>
</CustomField>