force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__rel_1723128375470_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128375470_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimItem_ItemCodeId_map_CodeSetBund_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>ClaimItem_ItemCodeId_map_CodeSetBund_rel</relationshipLabel>
    <relationshipName>rel_1723128375470_end</relationshipName>
    <type>Lookup</type>
</CustomField>