force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__ServicedEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServicedEndDateTime__c</fullName>
    <label>Service End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServicedEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>