force-app/main/default/objects/ssot__ClaimItem__dlm/fields/ssot__ServicedStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServicedStartDateTime__c</fullName>
    <label>Service Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServicedStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>